# ufold

./: .gitignore  CMakeLists.txt
libufold/: CMakeLists.txt  Format.cpp  SeparatorFinder.cpp  SeparatorSearcher.cpp  Separators.cpp  core.cpp  ufold.cpp
libufold/include/ufold/: Format.hpp  Formats.hpp  Formats.ipp  SeparatorFinder.hpp  SeparatorFinder.ipp  SeparatorSearcher.hpp  SeparatorSearcher.ipp  Separators.hpp  Separators.ipp  core.hpp  core.ipp  string.hpp  types.hpp  ufold.hpp
